# unisigma

./: README.md  render.yaml  unisigma.code-workspace  unisigma.db
.github/workflows/: ci.yml
backend/: .coverage  .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt  ruff.toml
backend/app/: main.py  models.py  schemas.py
backend/app/api/: router.py
backend/app/api/routes/: accounts.py  health.py  problems.py  sources.py  tags.py
backend/app/core/: config.py
backend/app/db/: bootstrap.py  session.py
backend/app/services/: embedding_service.py  passwords.py  pix2text_ocr.py  similarity_service.py  text_ocr.py
backend/tests/: test_api.py  test_test.py
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/coverage/: index.html
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  hooks.ts
frontend/src/components/: LatexRender.tsx
frontend/src/components/landing/: Landing.tsx
frontend/src/components/layout/: Navbar.tsx
frontend/src/components/problems/: CreateProblemForm.tsx
frontend/src/components/questions/: FilterBar.tsx  ProblemDiagramUpload.tsx  QuestionDetail.tsx  QuestionList.tsx
frontend/src/components/ui/: button.tsx
frontend/src/components/unicornbs/: thing.tsx
frontend/src/components/upload/: CreateProblemForm.tsx  OcrSection.tsx  SourcesSection.tsx  TagsSection.tsx  UploadView.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: AboutPage.tsx  LoginPage.tsx  SignUpPage.tsx
frontend/src/tests/: test.test.ts
frontend/src/types/: api.ts
mini-test-ui/: README.md  index.html
mini-test-ui/js/: api-client.js  app.js  composer-store.js  editor-utils.js
unisigma/: package.json
